# Day-3-5-challenge

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  report.md
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
chimera/: __init__.py
chimera/api/: __init__.py  server.py
chimera/core/: __init__.py  skills.py
chimera/skills/: __init__.py  trend_fetcher.py
frontend/: app.js  index.html  styles.css
research/: architecture_strategy.md  notes.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
tools/: spec_check.py
