[project]
name = "project-chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.7.0",
    "bandit>=1.7.10",
]
